--- a/ruoyi-ui-vue3/package.json
+++ b/ruoyi-ui-vue3/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "5.0.5",
+    "@vitejs/plugin-vue-jsx": "^4.2.0",
     "consola": "^3.2.3",
     "sass": "1.77.5",
     "unplugin-auto-import": "0.17.6",
