--- a/ruoyi-ui-vue3/package.json
+++ b/ruoyi-ui-vue3/package.json
@@ -40,6 +40,7 @@
     "new-dream-plus": "^2.4.3",
     "nprogress": "0.2.0",
     "pinia": "2.1.7",
+    "sortablejs": "^1.15.6",
     "uuid": "^9.0.1",
     "vue": "3.4.31",
     "vue-color-kit": "^1.0.6",
