--- a/ruoyi-ui-vue3/package.json
+++ b/ruoyi-ui-vue3/package.json
@@ -9,7 +9,8 @@
     "dev": "vite",
     "build:prod": "vite build",
     "build:stage": "vite build --mode staging",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "openapi": "openapi2ts"
   },
   "repository": {
     "type": "git",
@@ -52,10 +53,12 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@umijs/openapi": "^1.13.0",
     "@vitejs/plugin-vue": "5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.2.0",
     "consola": "^3.2.3",
     "sass": "1.77.5",
+    "typescript": "^5.8.3",
     "unplugin-auto-import": "0.17.6",
     "unplugin-vue-setup-extend-plus": "1.0.1",
     "vite": "5.3.2",
