--- a/ruoyi-ui-vue3/package.json
+++ b/ruoyi-ui-vue3/package.json
@@ -18,6 +18,9 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "2.3.1",
+    "@formily/core": "^2.3.7",
+    "@formily/element-plus": "^1.1.0",
+    "@formily/vue": "^2.3.7",
     "@icon-park/svg": "^1.4.2",
     "@marsgis/editor": "^1.3.3",
     "@quickearth/cesium": "latest",
