--- a/ruoyi-ui-vue3/package.json
+++ b/ruoyi-ui-vue3/package.json
@@ -51,6 +51,7 @@
     "vue-color-kit": "^1.0.6",
     "vue-cropper": "1.1.1",
     "vue-echarts": "^7.0.3",
+    "vue-request": "^2.0.4",
     "vue-router": "4.4.0",
     "vue3-layer": "^1.0.18",
     "vuex": "^4.1.0"
