新增文件上传接口 新增静态资源访问 新增指标分类接口

--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -137,3 +137,7 @@ layer:
   otherFileWebUrl: http://124.221.121.154/otherFile/
   workspace: test
   datastore: test
+
+file:
+  #文件存储路径
+  savePath: C:/groudwater
