--- a/ruoyi-ui-vue3/package.json
+++ b/ruoyi-ui-vue3/package.json
@@ -30,10 +30,12 @@
     "@vueuse/core": "10.11.0",
     "ant-design-vue": "^4.2.3",
     "axios": "0.28.1",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.10",
     "echarts": "^5.5.1",
     "element-plus": "2.8.0",
     "file-saver": "2.0.5",
+    "flv.js": "1.6.2",
     "fuse.js": "6.6.2",
     "js-cookie": "3.0.5",
     "jsencrypt": "3.3.2",
