修改图层管理bug

--- a/ruoyi-ui-vue3/package.json
+++ b/ruoyi-ui-vue3/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build:prod": "vite build",
+    "build:prod": "set NODE_OPTIONS=--max-old-space-size=8192 && vite build",
     "build:stage": "vite build --mode staging",
     "preview": "vite preview",
     "openapi": "openapi2ts"
