--- a/ruoyi-ui-vue3/public/config/config.json
+++ b/ruoyi-ui-vue3/public/config/config.json
@@ -66,7 +66,7 @@
       },
       "compass": {
         "bottom": "toolbar",
-        "right": "5px"
+        "left": "5px"
       },
       "distanceLegend": {
         "left": "100px",
@@ -89,13 +89,8 @@
     },
     "basemaps": [
       {
-        "id": 10,
-        "name": "地图底图",
-        "type": "group"
-      },
-      {
-        "pid": 10,
-        "name": "清徐离线影像",
+        "id": 101,
+        "name": "影像",
         "icon": "//data.mars3d.cn/img/thumbnail/basemap/google_img.png",
         "type": "xyz",
         "minimumLevel": 0,
@@ -103,8 +98,8 @@
         "show": true,
         "url": "http://39.100.43.147:9998/gisData/qx/{z}/{x}/{y}.png"
       },
-         {
-        "pid": 10,
+      {
+        "id": 102,
         "type": "geojson",
         "name": "园区范围",
         "crs": "EPSG:4519",
@@ -114,7 +109,7 @@
         "symbol": {
           "type": "polylineC",
           "styleOptions": {
-            "width": 5, 
+            "width": 5,
             "clampToGround": true,
             "opacity": 1,
             "color": "#ff0000"
@@ -122,56 +117,26 @@
         }
       },
       {
-        "pid": 10,
-        "type": "geojson",
-        "name": "重点企业",
-        "crs": "EPSG:4519",
-        "url": "geojson/1重点企业厂区边界.geojson",
-        "show": true,
-        "flyTo": false,
-        "popup": [
-          {
-            "field": "Layer",
-            "name": "类型"
-          }
-        ],
-        "symbol": {
-          "type": "polygonC",
-          "styleOptions": {
-            "clampToGround": true,
-            "opacity": 0.4,
-            "color": "#ff0000"
-          }
-        }
+        "id": 10,
+        "name": "地块",
+        "type": "group"
+      },
+      {
+        "id": 30,
+        "name": "企业",
+        "type": "group"
+      },
+      {
+        "id": 20,
+        "name": "监测点",
+        "type": "group"
       },
       {
         "pid": 10,
         "type": "geojson",
-        "name": "非重点企业",
-        "url": "geojson/2非重点企业厂区边界.geojson",
-        "show": true,
-        "flyTo": false,
-        "popup": [
-          {
-            "field": "Layer",
-            "name": "类型"
-          }
-        ],
-        "symbol": {
-          "type": "polygonC",
-          "styleOptions": {
-            "clampToGround": true,
-            "opacity": 0.4,
-            "color": "#0000ff"
-          }
-        }
-      },
-      {
-        "pid": 10,
-        "type": "geojson",
-        "name": "其它企业",
+        "name": "其它企业地块",
         "url": "geojson/4其它企业.geojson",
-        "show": true,
+        "show": false,
         "flyTo": false,
         "popup": [
           {
@@ -191,9 +156,54 @@
       {
         "pid": 10,
         "type": "geojson",
+        "name": "非重点企业地块",
+        "url": "geojson/2非重点企业厂区边界.geojson",
+        "show": false,
+        "flyTo": false,
+        "popup": [
+          {
+            "field": "Layer",
+            "name": "类型"
+          }
+        ],
+        "symbol": {
+          "type": "polygonC",
+          "styleOptions": {
+            "clampToGround": true,
+            "opacity": 0.4,
+            "color": "#0000ff"
+          }
+        }
+      },
+      {
+        "pid": 10,
+        "type": "geojson",
+        "name": "重点企业地块",
+        "crs": "EPSG:4519",
+        "url": "geojson/1重点企业厂区边界.geojson",
+        "show": false,
+        "flyTo": false,
+        "popup": [
+          {
+            "field": "Layer",
+            "name": "类型"
+          }
+        ],
+        "symbol": {
+          "type": "polygonC",
+          "styleOptions": {
+            "clampToGround": true,
+            "opacity": 0.4,
+            "color": "#ff0000"
+          }
+        }
+      },
+      {
+        "pid": 10,
+        "type": "geojson",
         "name": "耕地",
         "url": "geojson/5耕地.geojson",
-        "show": true,
+        "show": false,
         "flyTo": false,
         "popup": [
           {
