--- a/ruoyi-ui-vue3/package.json
+++ b/ruoyi-ui-vue3/package.json
@@ -26,6 +26,7 @@
     "@quickearth/cesium": "latest",
     "@quickearth/core": "latest",
     "@turf/turf": "^7.1.0",
+   
     "@vueup/vue-quill": "1.2.0",
     "@vueuse/core": "10.11.0",
     "ant-design-vue": "^4.2.3",
@@ -34,6 +35,7 @@
     "dayjs": "^1.11.10",
     "echarts": "^5.5.1",
     "element-plus": "2.8.0",
+    "ezuikit-js": "^8.1.10",
     "file-saver": "2.0.5",
     "flv.js": "1.6.2",
     "fuse.js": "6.6.2",
@@ -47,6 +49,7 @@
     "nprogress": "0.2.0",
     "pinia": "2.1.7",
     "pinia-plugin-persistedstate": "^4.3.0",
+    "qs": "^6.14.0",
     "sortablejs": "^1.15.6",
     "uuid": "^9.0.1",
     "vue": "3.4.31",
