--- a/ruoyi-ui-vue3/package.json
+++ b/ruoyi-ui-vue3/package.json
@@ -31,7 +31,7 @@
     "ant-design-vue": "^4.2.3",
     "axios": "0.28.1",
     "crypto-js": "^4.2.0",
-    "dayjs": "^1.11.10",
+    "dayjs": "^1.11.13",
     "echarts": "^5.5.1",
     "element-plus": "2.8.0",
     "file-saver": "2.0.5",
@@ -43,6 +43,7 @@
     "lodash-es": "^4.17.21",
     "mars3d": "^3.9.5",
     "mars3d-cesium": "^1.119.0",
+    "mitt": "^3.0.1",
     "new-dream-plus": "^2.4.3",
     "nprogress": "0.2.0",
     "pinia": "2.1.7",
